post some modify

--- a/_includes/themes/foundation/default.html
+++ b/_includes/themes/foundation/default.html
@@ -29,7 +29,7 @@
   <div class="row contain-to-grid">
       <nav class="top-bar">
           <ul class="left">
-              <li><a title="Home" href="http://thibaultlaurens.github.com">{{ site.title }}</a></li>
+              <li><a title="Home" href="http://tonyhack.github.com">{{ site.title }}</a></li>
               <li class="divider"></li>
               <li><a title="Archive" href="{{ BASE_PATH }}/archive.html">Archive</a></li>
               <li class="divider"></li>
@@ -48,7 +48,7 @@
               <li class="divider"></li>
               <li><a title="Go to github.com/tonyhack" href="https://github.com/tonyhack/" target="_blank">Projects</a></li>
               <li class="divider"></li>
-              <li><a title="Go to flickr.com/photos/thibaultlaurens" href="http://www.flickr.com/photos/thibaultlaurens/" target="_blank">Photo</a></li>
+              <li><a title="Go to flickr.com/photos/PierMarina" href="http://www.flickr.com/photos/PierMarina/" target="_blank">Photo</a></li>
               <li class="divider"></li>
               <li><a title="More info about me" href="{{ BASE_PATH }}/about.html">About</a></li>
  <!--
@@ -76,9 +76,7 @@
           <hr>
         <div class="eight columns">
             <p style="padding-top: 0px">
-                <a title="Go to facebook.com/thibault.laurens" target="_blank" href="https://www.facebook.com/thibault.laurens"><i class="social foundicon-facebook"></i></a>
                 <a title="Go to github.com/tonyhack" target="_blank" href="https://github.com/tonyhack"><i class="foundicon-github"></i></a>
-                <a title="Go to linkedin.com/thibault-laurens" target="_blank" href="http://www.linkedin.com/pub/thibault-laurens/13/b58/40b"><i class="social foundicon-linkedin"></i></a>
                 <a title="Go to weibo.com/tonycoder" target="_blank" href="https://weibo.com/tonycoder"><i class="social foundicon-twitter"></i></a>
                 <a title="Go to flickr.com/photos/PierMarina" target="_blank" href="http://www.flickr.com/"><i class="social foundicon-flickr"></i></a>
             </p>
@@ -97,9 +95,9 @@
     {% include JB/analytics %}
 
       <script type="text/javascript">
-		var disqus_shortname = 'thibaultlaurens';
+		var disqus_shortname = 'tonyhack';
 		var disqus_identifier = '{{ page.url }}';
-		var disqus_url = 'http://thibaultlaurens.github.com{{ page.url }}';
+		var disqus_url = 'http://tonyhack.github.com{{ page.url }}';
  
 		/* * * DON'T EDIT BELOW THIS LINE * * */
 		(function () {
