--- a/_includes/themes/foundation/post.html
+++ b/_includes/themes/foundation/post.html
@@ -50,7 +50,7 @@
       </div>
 
         <div class="two columns offset-by-one"  style="padding-top: 30px">
-        <a href="https://twitter.com/share" class="twitter-share-button" data-via="thibaultlaurens">Tweet</a>
+        <a href="https://twitter.com/share" class="twitter-share-button" data-via="tonycoder">Tweet</a>
       </div>
 </div>
 
