--- a/assets/themes/foundation/stylesheets/foundation.css
+++ b/assets/themes/foundation/stylesheets/foundation.css
@@ -32,7 +32,7 @@ p a, p a:visited { line-height: inherit; }
 
 .hide { display: none !important; }
 
-.highlight { background: ##F0F0F0; }
+/*.highlight { background: ##F0F0F0; }*/
 
 #googlemap img, object, embed { max-width: none; }
 
@@ -78,7 +78,7 @@ strong, b { font-weight: bold; line-height: inherit; }
 
 small { font-size: 60%; line-height: inherit; }
 
-code { font-weight: bold; background: #F0F0F0; }
+/*code { font-weight: bold; }*/
 
 /* Lists ---------------------- */
 ul, ol, dl { font-size: 14px; line-height: 1.6; margin-bottom: 17px; list-style-position: outside; }
