--- a/assets/themes/foundation/stylesheets/foundation.css
+++ b/assets/themes/foundation/stylesheets/foundation.css
@@ -32,6 +32,8 @@ p a, p a:visited { line-height: inherit; }
 
 .hide { display: none !important; }
 
+.full .full-content .read_more { float: right; }
+
 #googlemap img, object, embed { max-width: none; }
 
 #map_canvas embed { max-width: none; }
