--- a/assets/themes/foundation/stylesheets/app.css
+++ b/assets/themes/foundation/stylesheets/app.css
@@ -13,7 +13,8 @@
    Shared Styles
 ----------------------------------------- */
 header{
-    background: #0480be;
+    /*background: #0480be;*/
+    background: #3F3F3F;
     padding: 22px 0;
     margin-bottom: 40px;
 }
