--- a/assets/themes/foundation/stylesheets/app.css
+++ b/assets/themes/foundation/stylesheets/app.css
@@ -14,7 +14,7 @@
 ----------------------------------------- */
 header{
     /*background: #0480be;*/
-    background: #3F3F3F;
+    background: #5a5a5a;
     padding: 22px 0;
     margin-bottom: 40px;
 }
