--- a/assets/themes/foundation/stylesheets/app.css
+++ b/assets/themes/foundation/stylesheets/app.css
@@ -130,7 +130,7 @@ header * {
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
   
-.highlight { background-color: ##FFFFF5; border: 1px solid #ddd; padding: 2px 10px; margin-bottom: 18px; overflow: auto }
+.highlight { background-color: #FFFFF5; border: 1px solid #ddd; padding: 2px 10px; margin-bottom: 18px; overflow: auto }
 
 a i {
     color: #000;
