--- a/assets/themes/foundation/stylesheets/app.css
+++ b/assets/themes/foundation/stylesheets/app.css
@@ -142,6 +142,7 @@ a i:hover{
     color: #2BA6CB 
 }
 
+.full .full-content .read_more { float: right; }
 
 
 /* -----------------------------------------
