--- a/assets/themes/foundation/stylesheets/foundation.css
+++ b/assets/themes/foundation/stylesheets/foundation.css
@@ -19,6 +19,18 @@ a:focus { color: #2ba6cb; outline: none; }
 
 p a, p a:visited { line-height: inherit; }
 
+.archive {
+	border-top: 1px dotted #cecfd1;
+	list-style: none;
+	margin: 1.5em 0 0;
+}
+.archive li {
+	margin-bottom:0;
+}
+.archive .full {
+	margin-top:18px;
+}
+
 .excerpt {
 	background: url(/images/arrow-bullet.gif) no-repeat 0 12px;
 	border-bottom: 1px dotted #cecfd1;
